// Vitest Snapshot v1

exports[`FeatherProgressCircular.vue > Determinate > should calculate strokeDashoffset 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  >
    0 percent
  </span>
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should calculate strokeDashoffset 2`] = `
<div
  aria-busy="false"
  class="feather-progress-container completed determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="276.46015351590177"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  >
    100 percent, progress complete
  </span>
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should handle errors 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should handle errors 2`] = `
<div
  aria-busy="true"
  class="feather-progress-container completed error"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  >
    Progress interrupted, Error Message.
  </span>
  <div
    class="error-message"
  >
    
    Error Message.
    
  </div>
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should have container classified as determinate 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should render various sizes 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container sm"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should render various sizes 2`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container md"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should render various sizes 3`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Determinate > should support large size by default 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container determinate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <!--v-if-->
  <div
    class="determinate-container lg"
  >
    <svg
      class="feather-progress-circular"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="feather-progress-track"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-width="12"
      />
      <circle
        class="feather-progress-indicator"
        cx="50"
        cy="50"
        fill="transparent"
        r="44"
        stroke-dasharray="552.9203070318035"
        stroke-dashoffset="552.9203070318035"
        stroke-width="12"
        transform="rotate(-90 50 50)"
      />
    </svg>
  </div>
  <progress
    max="100"
    value="0"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should announce indeterminate message on mount 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container lg"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  >
    In progress, please wait
  </span>
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should be classified as indeterminate 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container lg"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should handle errors 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container lg"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should handle errors 2`] = `
<div
  aria-busy="true"
  class="feather-progress-container completed error"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container lg"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  >
    Progress interrupted, Error Message.
  </span>
  <div
    class="error-message"
  >
    
    Error Message.
    
  </div>
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should render various sizes 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container sm"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should render various sizes 2`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container md"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should render various sizes 3`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container lg"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;

exports[`FeatherProgressCircular.vue > Indeterminate > should support large size by default 1`] = `
<div
  aria-busy="true"
  class="feather-progress-container indeterminate"
>
  <span
    class="reduced-motion-caption"
  >
    Loading...
  </span>
  <div
    class="indeterminate-container lg"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <clippath
        id="clip"
      >
        <path
          d="M 50 0 a 50 50 0 0 1 0 100 50 50 0 0 1 1 -100 v 10 a 22 22 0 0 0 0 80 22 22 0 0 0 1 -80"
        />
      </clippath>
      <foreignobject
        clip-path="url(#clip)"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          class="track"
        />
      </foreignobject>
      <g
        class="indicator"
      >
        <foreignobject
          clip-path="url(#clip)"
          height="100"
          width="100"
          x="0"
          y="0"
        >
          <div
            class="gradient"
          />
        </foreignobject>
        <!-- &lt;circle class=&quot;tip&quot; r=&quot;5.15&quot; cx=&quot;51&quot; cy=&quot;5&quot;&gt;&lt;/circle&gt; -->
        <rect
          class="tip"
          height="10"
          width="3"
          x="50"
        />
      </g>
    </svg>
  </div>
  <!--v-if-->
  <progress
    max="100"
  />
  <span
    aria-live="assertive"
    class="announce"
  />
  
  <!--v-if-->
  
</div>
`;
